<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>

    <string-array name="categories_array">
        <item>Select Category (Mandatory)</item>
        <item>Painting and Calligraphy</item>
        <item>Ceramics</item>
        <item>Bronze Ware</item>
        <item>Lacquerware</item>
        <item>Jade Ware</item>
        <item>Enamel Ware</item>
        <item>Glassware</item>
        <item>Furniture</item>
        <item>Embroidery and Textiles</item>
        <item>Documents and Archives</item>
        <item>Gold and Silverware</item>
        <item>Clocks and Watches</item>
        <item>Religious Artifacts</item>
        <item>Daily-use Items</item>
        <item>Weaponry</item>
        <item>Miscellaneous Artifacts</item>
    </string-array>

    <string-array name="sort_options">
        <item>Default</item>
        <item>Lot Number</item>
        <item>Timestamp</item>
    </string-array>

    <string-array name="materials_array">
        <item>Select Material (Mandatory)</item>
        <item>Bronze</item>
        <item>Stone</item>
        <item>Wood</item>
        <item>Jade</item>
        <item>Ceramic</item>
        <item>Lacquerware</item>
        <item>Ivory</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Iron</item>
        <item>Mixed Media</item>
    </string-array>

    <string-array name="dynasties_array">
        <item>Select Dynasty/Period (Mandatory)</item>
        <item>Shang Dynasty (c. 1600-1046 BCE)</item>
        <item>Western Zhou Dynasty (c. 1046-771 BCE)</item>
        <item>Eastern Zhou Dynasty (770-256 BCE)</item>
        <item>Qin Dynasty (221-206 BCE)</item>
        <item>Han Dynasty (206 BCE-220 CE)</item>
        <item>Three Kingdoms Period (220-280 CE)</item>
        <item>Jin Dynasty (266-420 CE)</item>
        <item>Southern and Northern Dynasties (420-589 CE)</item>
        <item>Sui Dynasty (581-618 CE)</item>
        <item>Tang Dynasty (618-907 CE)</item>
        <item>Five Dynasties and Ten Kingdoms (907-960 CE)</item>
        <item>Song Dynasty (960-1279 CE)</item>
        <item>Liao Dynasty (907-1125 CE)</item>
        <item>Jin Dynasty (1115-1234 CE)</item>
        <item>Yuan Dynasty (1271-1368 CE)</item>
        <item>Ming Dynasty (1368-1644 CE)</item>
        <item>Qing Dynasty (1644-1912 CE)</item>
        <item>Republic of China Period (1912-1949 CE)</item>
    </string-array>

    <string-array name="sort_array">
        <item>Default</item>
        <item>Lot Number</item>
        <item>Newest</item>
    </string-array>

    <string name="supabase_url">https://stnlsqpruhjfocqldrmv.supabase.co</string>
    <string name="supabase_anon_key">sb_publishable_OhANNKijx0JTEYKqw3skSA_E6rvO1YJ</string>
    <string name="supabase_image_bucket">artifact image</string>
    <string name="profile">Profile</string>
    <string name="username">USERNAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="account_deletion">ACCOUNT DELETION</string>
    <string name="account_deletion_warning">Deleting your account will remove all saved artifacts, collections, and activity history from TAAM permanently.</string>
    <string name="delete_account">Delete Account</string>
    <string name="permanent_warning">This action is permanent and cannot be undone</string>
    <string name="save_artifact_button">Save Button</string>
    <string name="artifact_browser">Artifact Browser</string>
    <string name="settings">Settings</string>
    <string name="button">Button</string>
    <string name="empty">empty</string>
    <string name="comments">Comments</string>
    <string name="current_location">Current location:</string>
    <string name="notes">Notes:</string>
    <string name="n_a">N/A</string>
    <string name="acquisition_method">Acquisition method:</string>
    <string name="provenance">Provenance:</string>
    <string name="accession_number">Accession number:</string>
    <string name="title">Title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="category">Category:</string>
    <string name="material">Material:</string>
    <string name="dynasty_period">Dynasty/period:</string>
    <string name="cultural_origin">Cultural Origin:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="condition_report">Condition Report:</string>
    <string name="more_information">More information</string>
    <string name="artifact_image">Artifact Image</string>
    <string name="item_details">Item Details</string>


</resources>