<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewItemDetConditionReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="105dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetConditionReport"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetDimensions"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetCommentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="176dp"
        android:text="@string/comments"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetDesc" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="156dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetMoreInfoTitle"
        app:srcCompat="@drawable/caret" />

    <TextView
        android:id="@+id/c_textViewItemDetCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="13dp"
        android:text="@string/current_location"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:width="105dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetCurrentLocation"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:width="170dp"
        android:text="@string/notes"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textViewItemDetCurrentLocation"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:width="170dp"
        android:text="@string/n_a"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textViewItemDetAcquisition"
        app:layout_constraintTop_toBottomOf="@+id/c_textViewItemDetNotes"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetAcquisition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/acquisition_method"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetCurrentLocation"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetAcquisition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="90dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetAcquisition"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetCurrentLocation"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetProvenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/provenance"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetAcquisition"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetProvenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="125dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetProvenance"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetAcquisition"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetAccession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/accession_number"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetProvenance"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetAccession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="95dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetAccession"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetProvenance"
        app:lineHeight="19dp" />

    <ImageView
        android:id="@+id/imageViewItemD"
        android:layout_width="167dp"
        android:layout_height="175dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/artifact_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewItemDetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="31dp"
        android:width="360dp"
        android:text="@string/title"
        android:textColor="@color/highlight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewItemDetDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:width="372dp"
        android:text="@string/lorem"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewItemD"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemD"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetTitle"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:width="140dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetCategory"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetTitle"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/material"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemD"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetCategory"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="145dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetMaterial"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetCategory"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetDynasty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/dynasty_period"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemD"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetMaterial"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetDynasty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="115dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetDynasty"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetMaterial"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetCulturalOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/cultural_origin"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemD"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetDynasty"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetCulturalOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="120dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetCulturalOrigin"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetDynasty"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetDimensions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/dimensions"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemD"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetCulturalOrigin"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetDimensions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:width="130dp"
        android:text="@string/empty"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/c_textViewItemDetDimensions"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetCulturalOrigin"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/c_textViewItemDetConditionReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/condition_report"
        android:textColor="@color/text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemD"
        app:layout_constraintTop_toBottomOf="@id/textViewItemDetDimensions"
        app:lineHeight="19dp" />

    <TextView
        android:id="@+id/textViewItemDetMoreInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="23dp"
        android:text="@string/more_information"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetDesc" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/item_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDetMoreInfoTitle"
        app:srcCompat="@drawable/caret" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="256dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/save_artifact_button"
        android:src="@drawable/selector_bookmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/highlight" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>